--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@ html, body {
 }
 
 body { 
+    overflow-x: hidden;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background: linear-gradient(90deg, rgb(255, 255, 255) 80%, #dff5ff 80%);
